modify grpc apis: return user profile, add authentication
