# m2m-wallet/api/topup.pb.go
@@ -142,12 +142,13 @@ func (m *TopUpHistory) GetCreatedAt() string {
 }
 
 type GetTopUpHistoryResponse struct {
-	Count                int64           `protobuf:"varint,1,opt,name=count,proto3" json:"count,omitempty"`
-	TopupHistory         []*TopUpHistory `protobuf:"bytes,2,rep,name=topup_history,json=topupHistory,proto3" json:"topup_history,omitempty"`
-	Error                string          `protobuf:"bytes,3,opt,name=error,proto3" json:"error,omitempty"`
-	XXX_NoUnkeyedLiteral struct{}        `json:"-"`
-	XXX_unrecognized     []byte          `json:"-"`
-	XXX_sizecache        int32           `json:"-"`
+	Count                int64            `protobuf:"varint,1,opt,name=count,proto3" json:"count,omitempty"`
+	TopupHistory         []*TopUpHistory  `protobuf:"bytes,2,rep,name=topup_history,json=topupHistory,proto3" json:"topup_history,omitempty"`
+	Error                string           `protobuf:"bytes,3,opt,name=error,proto3" json:"error,omitempty"`
+	UserProfile          *ProfileResponse `protobuf:"bytes,4,opt,name=user_profile,json=userProfile,proto3" json:"user_profile,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}         `json:"-"`
+	XXX_unrecognized     []byte           `json:"-"`
+	XXX_sizecache        int32            `json:"-"`
 }
 
 func (m *GetTopUpHistoryResponse) Reset()         { *m = GetTopUpHistoryResponse{} }
@@ -196,6 +197,13 @@ func (m *GetTopUpHistoryResponse) GetError() string {
 	return ""
 }
 
+func (m *GetTopUpHistoryResponse) GetUserProfile() *ProfileResponse {
+	if m != nil {
+		return m.UserProfile
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterType((*GetTopUpHistoryRequest)(nil), "api.GetTopUpHistoryRequest")
 	proto.RegisterType((*TopUpHistory)(nil), "api.TopUpHistory")
@@ -205,27 +213,30 @@ func init() {
 func init() { proto.RegisterFile("topup.proto", fileDescriptor_8eec749941d0cb6c) }
 
 var fileDescriptor_8eec749941d0cb6c = []byte{
-	// 319 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x6c, 0x91, 0xcf, 0x4e, 0xc2, 0x40,
-	0x10, 0xc6, 0x43, 0x0b, 0x24, 0x1d, 0x50, 0xe3, 0x08, 0xd8, 0x00, 0x26, 0xa4, 0x27, 0x4e, 0x90,
-	0x60, 0xe2, 0xdd, 0x93, 0x7a, 0xad, 0x7a, 0x34, 0xcd, 0x0a, 0x4b, 0xdd, 0x84, 0x76, 0xd6, 0xed,
-	0xd4, 0x84, 0x83, 0x17, 0x5f, 0xc1, 0x47, 0xf3, 0x15, 0x7c, 0x10, 0xc3, 0xb4, 0x26, 0xfe, 0xe1,
-	0xd6, 0x6f, 0xfa, 0xe5, 0xb7, 0xdf, 0x37, 0x03, 0x1d, 0x26, 0x5b, 0xda, 0x99, 0x75, 0xc4, 0x84,
-	0xbe, 0xb2, 0x66, 0x38, 0x4e, 0x89, 0xd2, 0x8d, 0x9e, 0x2b, 0x6b, 0xe6, 0x2a, 0xcf, 0x89, 0x15,
-	0x1b, 0xca, 0x8b, 0xca, 0x12, 0x3d, 0xc0, 0xe0, 0x4a, 0xf3, 0x1d, 0xd9, 0x7b, 0x7b, 0x6d, 0x0a,
-	0x26, 0xb7, 0x8d, 0xf5, 0x73, 0xa9, 0x0b, 0xc6, 0x3e, 0xb4, 0xc9, 0xa5, 0x89, 0x59, 0x85, 0x8d,
-	0x49, 0x63, 0xea, 0xc7, 0x2d, 0x72, 0xe9, 0xcd, 0x0a, 0x07, 0xd0, 0xa6, 0xf5, 0xba, 0xd0, 0x1c,
-	0x7a, 0x32, 0xae, 0x15, 0xf6, 0xa0, 0xb5, 0x31, 0x99, 0xe1, 0xd0, 0xaf, 0xdc, 0x22, 0x22, 0x03,
-	0xdd, 0x9f, 0x6c, 0x44, 0x68, 0xae, 0x1d, 0x65, 0x82, 0x0c, 0x62, 0xf9, 0xc6, 0x43, 0xf0, 0x98,
-	0x84, 0x16, 0xc4, 0x1e, 0xd3, 0xee, 0x05, 0x95, 0x51, 0x99, 0x57, 0x28, 0x2f, 0xae, 0x15, 0x9e,
-	0x01, 0x2c, 0x9d, 0x56, 0xac, 0x57, 0x89, 0xe2, 0xb0, 0x29, 0xfe, 0xa0, 0x9e, 0x5c, 0x72, 0xf4,
-	0x0a, 0xa7, 0xff, 0x9a, 0x14, 0x96, 0xf2, 0x42, 0xef, 0xb2, 0x2d, 0x05, 0x58, 0x37, 0x11, 0x81,
-	0x17, 0x70, 0x20, 0xcb, 0x4a, 0x9e, 0x2a, 0x7b, 0xe8, 0x4d, 0xfc, 0x69, 0x67, 0x71, 0x3c, 0x53,
-	0xd6, 0xcc, 0x7e, 0x71, 0xba, 0xe2, 0xfb, 0xee, 0xd0, 0x83, 0x96, 0x76, 0x8e, 0x9c, 0xc4, 0x0b,
-	0xe2, 0x4a, 0x2c, 0xb6, 0x75, 0xd3, 0x5b, 0xed, 0x5e, 0xcc, 0x52, 0xa3, 0x81, 0xa3, 0x3f, 0x71,
-	0x70, 0x24, 0xe4, 0xfd, 0xeb, 0x1e, 0x8e, 0xf7, 0xff, 0xac, 0x1a, 0x44, 0xa3, 0xb7, 0x8f, 0xcf,
-	0x77, 0xaf, 0x8f, 0x27, 0x72, 0x46, 0x26, 0x9b, 0x94, 0x76, 0x5e, 0xe7, 0x7e, 0x6c, 0xcb, 0x29,
-	0xcf, 0xbf, 0x02, 0x00, 0x00, 0xff, 0xff, 0x04, 0x3e, 0x10, 0xd5, 0xfc, 0x01, 0x00, 0x00,
+	// 362 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x6c, 0x92, 0x4d, 0x6e, 0xe2, 0x40,
+	0x10, 0x85, 0x85, 0x0d, 0x48, 0x2e, 0x33, 0x8c, 0xa6, 0x07, 0x18, 0x0b, 0x18, 0x09, 0x79, 0xc5,
+	0x0a, 0x24, 0x46, 0x9a, 0xac, 0xb3, 0x4a, 0xb2, 0x8b, 0x9c, 0x64, 0x19, 0x59, 0x1d, 0x68, 0x3b,
+	0x2d, 0x19, 0x57, 0xa7, 0x5d, 0x8e, 0xc4, 0x36, 0x57, 0xc8, 0x5d, 0x72, 0x91, 0x5c, 0x21, 0x07,
+	0x89, 0xa8, 0x36, 0x52, 0x7e, 0xd8, 0xf9, 0x95, 0x9f, 0xbe, 0x7e, 0xaf, 0xbb, 0x20, 0x24, 0x34,
+	0xb5, 0x59, 0x18, 0x8b, 0x84, 0xc2, 0x97, 0x46, 0x8f, 0xa7, 0x39, 0x62, 0x5e, 0xa8, 0xa5, 0x34,
+	0x7a, 0x29, 0xcb, 0x12, 0x49, 0x92, 0xc6, 0xb2, 0x72, 0x96, 0x71, 0x5f, 0x97, 0xa4, 0x6c, 0x29,
+	0x0b, 0xa7, 0xe3, 0x5b, 0x18, 0x9d, 0x29, 0xba, 0x46, 0x73, 0x63, 0xce, 0x75, 0x45, 0x68, 0x77,
+	0x89, 0x7a, 0xa8, 0x55, 0x45, 0x62, 0x08, 0x5d, 0xb4, 0x79, 0xaa, 0x37, 0x51, 0x6b, 0xd6, 0x9a,
+	0xfb, 0x49, 0x07, 0x6d, 0x7e, 0xb1, 0x11, 0x23, 0xe8, 0x62, 0x96, 0x55, 0x8a, 0x22, 0x8f, 0xc7,
+	0x8d, 0x12, 0x03, 0xe8, 0x14, 0x7a, 0xab, 0x29, 0xf2, 0x9d, 0x9b, 0x45, 0xac, 0xa1, 0xf7, 0x91,
+	0x2d, 0x04, 0xb4, 0x33, 0x8b, 0x5b, 0x46, 0x06, 0x09, 0x7f, 0x8b, 0x3e, 0x78, 0x84, 0x4c, 0x0b,
+	0x12, 0x8f, 0x70, 0x7f, 0x82, 0xdc, 0x62, 0x5d, 0x3a, 0x94, 0x97, 0x34, 0x4a, 0xfc, 0x05, 0x58,
+	0x5b, 0x25, 0x49, 0x6d, 0x52, 0x49, 0x51, 0x9b, 0xfd, 0x41, 0x33, 0x39, 0xa5, 0xf8, 0xa5, 0x05,
+	0x7f, 0xbe, 0x55, 0xa9, 0x0c, 0x96, 0x95, 0xda, 0x87, 0x5b, 0x33, 0xb1, 0xa9, 0xc2, 0x42, 0xfc,
+	0x87, 0x1f, 0x7c, 0x7b, 0xe9, 0xbd, 0xb3, 0x47, 0xde, 0xcc, 0x9f, 0x87, 0xab, 0x5f, 0x0b, 0x69,
+	0xf4, 0xe2, 0x13, 0xa7, 0xc7, 0xbe, 0x43, 0x89, 0x01, 0x74, 0x94, 0xb5, 0x68, 0x39, 0x5f, 0x90,
+	0x38, 0x21, 0x4e, 0xa0, 0x57, 0x57, 0xca, 0xa6, 0xc6, 0x62, 0xa6, 0x0b, 0xc5, 0x01, 0xc3, 0xd5,
+	0x80, 0x61, 0x97, 0x6e, 0x76, 0xc8, 0x93, 0x84, 0x7b, 0x67, 0x33, 0x5c, 0xed, 0x9a, 0x3b, 0xba,
+	0x52, 0xf6, 0x51, 0xaf, 0x95, 0xd0, 0xf0, 0xf3, 0x4b, 0x0f, 0x31, 0x61, 0xca, 0xf1, 0x87, 0x1a,
+	0x4f, 0x8f, 0xff, 0x74, 0x47, 0xc5, 0x93, 0xa7, 0xd7, 0xb7, 0x67, 0x6f, 0x28, 0x7e, 0xf3, 0x42,
+	0x10, 0x9a, 0xb4, 0x36, 0xcb, 0xa6, 0xf0, 0x5d, 0x97, 0x97, 0xe0, 0xdf, 0x7b, 0x00, 0x00, 0x00,
+	0xff, 0xff, 0x2d, 0x12, 0xfc, 0x8a, 0x46, 0x02, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
