# m2m-wallet/api/wallet.pb.go
@@ -63,11 +63,12 @@ func (m *GetWalletBalanceRequest) GetOrgId() int64 {
 }
 
 type GetWalletBalanceResponse struct {
-	Balance              float32  `protobuf:"fixed32,1,opt,name=balance,proto3" json:"balance,omitempty"`
-	Error                string   `protobuf:"bytes,2,opt,name=error,proto3" json:"error,omitempty"`
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
+	Balance              float32          `protobuf:"fixed32,1,opt,name=balance,proto3" json:"balance,omitempty"`
+	Error                string           `protobuf:"bytes,2,opt,name=error,proto3" json:"error,omitempty"`
+	UserProfile          *ProfileResponse `protobuf:"bytes,3,opt,name=user_profile,json=userProfile,proto3" json:"user_profile,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}         `json:"-"`
+	XXX_unrecognized     []byte           `json:"-"`
+	XXX_sizecache        int32            `json:"-"`
 }
 
 func (m *GetWalletBalanceResponse) Reset()         { *m = GetWalletBalanceResponse{} }
@@ -107,6 +108,13 @@ func (m *GetWalletBalanceResponse) GetError() string {
 		return m.Error
 	}
 	return ""
+}
+
+func (m *GetWalletBalanceResponse) GetUserProfile() *ProfileResponse {
+	if m != nil {
+		return m.UserProfile
+	}
+	return nil
 }
 
 type GetVmxcTxHistoryRequest struct {
@@ -239,6 +247,7 @@ type GetVmxcTxHistoryResponse struct {
 	Error                string           `protobuf:"bytes,1,opt,name=error,proto3" json:"error,omitempty"`
 	Count                int64            `protobuf:"varint,2,opt,name=count,proto3" json:"count,omitempty"`
 	TxHistory            []*VmxcTxHistory `protobuf:"bytes,3,rep,name=tx_history,json=txHistory,proto3" json:"tx_history,omitempty"`
+	UserProfile          *ProfileResponse `protobuf:"bytes,4,opt,name=user_profile,json=userProfile,proto3" json:"user_profile,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}         `json:"-"`
 	XXX_unrecognized     []byte           `json:"-"`
 	XXX_sizecache        int32            `json:"-"`
@@ -290,6 +299,13 @@ func (m *GetVmxcTxHistoryResponse) GetTxHistory() []*VmxcTxHistory {
 	return nil
 }
 
+func (m *GetVmxcTxHistoryResponse) GetUserProfile() *ProfileResponse {
+	if m != nil {
+		return m.UserProfile
+	}
+	return nil
+}
+
 func init() {
 	proto.RegisterType((*GetWalletBalanceRequest)(nil), "api.GetWalletBalanceRequest")
 	proto.RegisterType((*GetWalletBalanceResponse)(nil), "api.GetWalletBalanceResponse")
@@ -301,34 +317,37 @@ func init() {
 func init() { proto.RegisterFile("wallet.proto", fileDescriptor_b88fd140af4deb6f) }
 
 var fileDescriptor_b88fd140af4deb6f = []byte{
-	// 419 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x7c, 0x52, 0xcb, 0x8e, 0xd3, 0x40,
-	0x10, 0x94, 0xed, 0x4d, 0x56, 0x6e, 0x58, 0x84, 0x5a, 0xc0, 0x8e, 0x96, 0x04, 0x45, 0x86, 0x43,
-	0x4e, 0x31, 0x2c, 0x5f, 0x00, 0x17, 0x1e, 0x47, 0xb3, 0x82, 0x1b, 0xd1, 0xac, 0x33, 0x09, 0x23,
-	0xd9, 0x6e, 0x33, 0xee, 0x2c, 0xb6, 0x10, 0x17, 0xf8, 0x04, 0x3e, 0x8d, 0x5f, 0xe0, 0x33, 0x38,
-	0xa0, 0xf4, 0x78, 0x1f, 0x59, 0x36, 0xdc, 0xa6, 0xc6, 0xd3, 0x55, 0xee, 0xaa, 0x82, 0xdb, 0x5f,
-	0x74, 0x51, 0x18, 0x9e, 0xd5, 0x8e, 0x98, 0x30, 0xd2, 0xb5, 0x3d, 0x1a, 0xad, 0x88, 0x56, 0x85,
-	0x49, 0x75, 0x6d, 0x53, 0x5d, 0x55, 0xc4, 0x9a, 0x2d, 0x55, 0x8d, 0x7f, 0x92, 0x3c, 0x85, 0xc3,
-	0x57, 0x86, 0x3f, 0xc8, 0xd4, 0x4b, 0x5d, 0xe8, 0x2a, 0x37, 0x99, 0xf9, 0xbc, 0x36, 0x0d, 0xe3,
-	0x7d, 0x18, 0x92, 0x5b, 0xcd, 0xed, 0x42, 0x05, 0x93, 0x60, 0x1a, 0x65, 0x03, 0x72, 0xab, 0x37,
-	0x8b, 0xe4, 0x2d, 0xa8, 0x7f, 0x27, 0x9a, 0x9a, 0xaa, 0xc6, 0xa0, 0x82, 0xfd, 0x53, 0x7f, 0x25,
-	0x33, 0x61, 0x76, 0x0e, 0xf1, 0x1e, 0x0c, 0x8c, 0x73, 0xe4, 0x54, 0x38, 0x09, 0xa6, 0x71, 0xe6,
-	0x41, 0xf2, 0x51, 0xd4, 0xdf, 0x97, 0x6d, 0x7e, 0xd2, 0xbe, 0xb6, 0x0d, 0x93, 0xeb, 0xfe, 0xaf,
-	0x8e, 0x0f, 0x60, 0x48, 0xcb, 0x65, 0x63, 0x58, 0x88, 0xa2, 0xac, 0x47, 0x1b, 0xfe, 0xc2, 0x96,
-	0x96, 0x55, 0xe4, 0x5f, 0x0b, 0x48, 0x7e, 0x04, 0x70, 0xb0, 0xc5, 0x8e, 0x08, 0x7b, 0x4b, 0x47,
-	0xa5, 0x90, 0xc6, 0x99, 0x9c, 0xf1, 0x0e, 0x84, 0x4c, 0xfd, 0x8f, 0x85, 0x4c, 0x78, 0x08, 0xfb,
-	0xdc, 0xce, 0xb9, 0xab, 0x8d, 0xb0, 0xc5, 0xd9, 0x90, 0xdb, 0x93, 0xae, 0x36, 0x1b, 0x71, 0x5d,
-	0xd2, 0xba, 0x62, 0xb5, 0x27, 0xdb, 0xf5, 0x08, 0xc7, 0x00, 0xb9, 0x33, 0x9a, 0xcd, 0x62, 0xae,
-	0x59, 0x0d, 0x64, 0x26, 0xee, 0x6f, 0x5e, 0x70, 0xd2, 0x89, 0x63, 0xd7, 0xb6, 0xec, 0x1d, 0xbb,
-	0xf0, 0x25, 0xb8, 0xe2, 0xcb, 0xe6, 0x36, 0x17, 0x1d, 0xbf, 0xa4, 0x07, 0xf8, 0x0c, 0x80, 0xdb,
-	0xf9, 0x27, 0xcf, 0xa0, 0xa2, 0x49, 0x34, 0xbd, 0x75, 0x8c, 0x33, 0x5d, 0xdb, 0xd9, 0x36, 0x77,
-	0xcc, 0xe7, 0xc7, 0xe3, 0x3f, 0x01, 0x1c, 0xf8, 0xa8, 0xde, 0x19, 0x77, 0x66, 0x73, 0x83, 0x6b,
-	0xb8, 0x7b, 0x3d, 0x3e, 0x1c, 0x09, 0xc9, 0x8e, 0x1e, 0x1c, 0x8d, 0x77, 0x7c, 0xf5, 0x1b, 0x24,
-	0x4f, 0xbe, 0xff, 0xfa, 0xfd, 0x33, 0x7c, 0x84, 0x23, 0x69, 0x98, 0xef, 0x5f, 0xda, 0xc7, 0x9e,
-	0x7e, 0xf5, 0x19, 0x7e, 0x43, 0x16, 0xd9, 0xed, 0x2c, 0x2e, 0x64, 0x6f, 0x2a, 0xc0, 0xa5, 0xec,
-	0x8d, 0xc6, 0x25, 0x8f, 0x45, 0x76, 0x8c, 0x0f, 0xaf, 0xca, 0x9e, 0x95, 0x6d, 0x9e, 0x5e, 0x7a,
-	0x74, 0x3a, 0x94, 0x92, 0x3f, 0xff, 0x1b, 0x00, 0x00, 0xff, 0xff, 0x45, 0xa4, 0xf1, 0x3d, 0x17,
-	0x03, 0x00, 0x00,
+	// 470 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x53, 0xc1, 0x6e, 0xd3, 0x40,
+	0x10, 0x95, 0xe3, 0x24, 0x95, 0x27, 0x6d, 0x85, 0x46, 0x81, 0x5a, 0x21, 0x41, 0x91, 0xe1, 0x90,
+	0x53, 0x0c, 0xe1, 0xc0, 0x19, 0x2e, 0xc0, 0x0d, 0x2d, 0x15, 0xdc, 0xb0, 0xb6, 0xce, 0x26, 0xac,
+	0x64, 0x7b, 0xcc, 0x7a, 0x52, 0x1c, 0x21, 0x2e, 0xf0, 0x09, 0xfc, 0x09, 0xbf, 0xc2, 0x2f, 0xf0,
+	0x19, 0x1c, 0x50, 0x76, 0xdd, 0xb4, 0x09, 0x2d, 0xea, 0xcd, 0x6f, 0xbc, 0xfb, 0xde, 0xcc, 0x9b,
+	0xb7, 0x70, 0xf8, 0x59, 0x66, 0x99, 0xe2, 0x69, 0x69, 0x88, 0x09, 0x7d, 0x59, 0xea, 0xc1, 0x70,
+	0x49, 0xb4, 0xcc, 0x54, 0x2c, 0x4b, 0x1d, 0xcb, 0xa2, 0x20, 0x96, 0xac, 0xa9, 0xa8, 0xdc, 0x91,
+	0xc1, 0xb1, 0x2e, 0x58, 0x99, 0x42, 0x66, 0x0e, 0x47, 0x8f, 0xe1, 0xe4, 0xa5, 0xe2, 0xf7, 0x96,
+	0xe5, 0x85, 0xcc, 0x64, 0x91, 0x2a, 0xa1, 0x3e, 0xad, 0x54, 0xc5, 0x78, 0x17, 0xba, 0x64, 0x96,
+	0x89, 0x9e, 0x87, 0xde, 0xd8, 0x9b, 0xf8, 0xa2, 0x43, 0x66, 0xf9, 0x7a, 0x1e, 0x7d, 0xf7, 0x20,
+	0xfc, 0xf7, 0x4a, 0x55, 0x52, 0x51, 0x29, 0x0c, 0xe1, 0xe0, 0xcc, 0x95, 0xec, 0xa5, 0x96, 0xb8,
+	0x80, 0xd8, 0x87, 0x8e, 0x32, 0x86, 0x4c, 0xd8, 0x1a, 0x7b, 0x93, 0x40, 0x38, 0x80, 0xcf, 0xe0,
+	0x70, 0x55, 0x29, 0x93, 0x94, 0x86, 0x16, 0x3a, 0x53, 0xa1, 0x3f, 0xf6, 0x26, 0xbd, 0x59, 0x7f,
+	0x2a, 0x4b, 0x3d, 0x7d, 0xe3, 0x6a, 0x17, 0xdc, 0xa2, 0xb7, 0x39, 0xd9, 0x14, 0xa3, 0x0f, 0xb6,
+	0xef, 0x77, 0x79, 0x9d, 0x9e, 0xd6, 0xaf, 0x74, 0xc5, 0x64, 0xd6, 0xff, 0xef, 0x1b, 0xef, 0x41,
+	0x97, 0x16, 0x8b, 0x4a, 0xb1, 0xed, 0xc0, 0x17, 0x0d, 0xda, 0x34, 0x96, 0xe9, 0x5c, 0xb3, 0xd5,
+	0xf6, 0x85, 0x03, 0x9b, 0x29, 0x8f, 0x76, 0xd8, 0x11, 0xa1, 0xbd, 0x30, 0x94, 0x5b, 0xd2, 0x40,
+	0xd8, 0x6f, 0x3c, 0x86, 0x16, 0x53, 0x33, 0x51, 0x8b, 0x09, 0x4f, 0xe0, 0x80, 0xeb, 0x84, 0xd7,
+	0xa5, 0x9b, 0x24, 0x10, 0x5d, 0xae, 0x4f, 0xd7, 0xa5, 0xda, 0x88, 0xcb, 0x9c, 0x56, 0x05, 0x87,
+	0x6d, 0x6b, 0x4b, 0x83, 0x70, 0x04, 0x90, 0x1a, 0x25, 0x59, 0xcd, 0x13, 0xc9, 0x61, 0xc7, 0xde,
+	0x09, 0x9a, 0xca, 0x73, 0x8e, 0x7e, 0x3a, 0xaf, 0xf7, 0xc6, 0x6c, 0xbc, 0xde, 0x3a, 0xea, 0x5d,
+	0x75, 0xb4, 0x0f, 0x9d, 0xd4, 0x0a, 0xb9, 0x29, 0x1d, 0xc0, 0x27, 0x00, 0x5c, 0x27, 0x1f, 0x1d,
+	0x43, 0xe8, 0x8f, 0xfd, 0x49, 0x6f, 0x86, 0xd6, 0xe5, 0x5d, 0xee, 0x80, 0xb7, 0xf3, 0xee, 0xaf,
+	0xa6, 0x7d, 0xcb, 0xd5, 0xcc, 0xfe, 0x78, 0x70, 0xe4, 0xd2, 0xf1, 0x56, 0x99, 0x73, 0x9d, 0x2a,
+	0x5c, 0xc1, 0x9d, 0xfd, 0xc4, 0xe0, 0xd0, 0x12, 0xdd, 0x90, 0xbd, 0xc1, 0xe8, 0x86, 0xbf, 0x4e,
+	0x2f, 0x7a, 0xf4, 0xed, 0xd7, 0xef, 0x1f, 0xad, 0x07, 0x38, 0xb4, 0x29, 0x77, 0x6f, 0x20, 0x6e,
+	0x92, 0x16, 0x7f, 0x71, 0xdb, 0xff, 0x8a, 0x6c, 0x65, 0x77, 0xb7, 0xb8, 0x95, 0xbd, 0x2e, 0x3a,
+	0x97, 0xb2, 0xd7, 0x3a, 0x1e, 0x3d, 0xb4, 0xb2, 0x23, 0xbc, 0x7f, 0x55, 0xf6, 0x3c, 0xaf, 0xd3,
+	0xf8, 0xd2, 0xdc, 0xb3, 0xae, 0x7d, 0x58, 0x4f, 0xff, 0x06, 0x00, 0x00, 0xff, 0xff, 0x29, 0xa2,
+	0x22, 0x5e, 0x9b, 0x03, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
