# m2m-wallet/pkg/services/supernode/supernode_controller.go
@@ -2,8 +2,12 @@ package supernode
 
 import (
 	"context"
+	"fmt"
 	log "github.com/sirupsen/logrus"
 	"gitlab.com/MXCFoundation/cloud/mxprotocol-server/m2m-wallet/api"
+	"gitlab.com/MXCFoundation/cloud/mxprotocol-server/m2m-wallet/pkg/auth"
+	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
 )
 
 func Setup() error {
@@ -13,13 +17,20 @@ func Setup() error {
 }
 
 type SupernodeServerAPI struct {
-	//todo
+	serviceName string
 }
 
 func NewSupernodeServerAPI() *SupernodeServerAPI {
-	return &SupernodeServerAPI{}
+	return &SupernodeServerAPI{serviceName: "supernode"}
 }
 
-func (s *SupernodeServerAPI) GetSuperNodeActiveMoneyAccount(context.Context, *api.GetSuperNodeActiveMoneyAccountRequest) (*api.GetSuperNodeActiveMoneyAccountResponse, error) {
+func (s *SupernodeServerAPI) GetSuperNodeActiveMoneyAccount(ctx context.Context, req *api.GetSuperNodeActiveMoneyAccountRequest) (*api.GetSuperNodeActiveMoneyAccountResponse, error) {
+	userProfile, err := auth.VerifyRequestViaAuthServer(ctx, s.serviceName)
+	if err != nil {
+		return nil, status.Errorf(codes.Unauthenticated, "authentication failed: %s", err)
+	}
+
+	//Todo: userInfo should be the information of users eg.id,name,org,etc. Use it to get data from DB.
+	fmt.Println("username = ", userProfile.User.Username)
 	return &api.GetSuperNodeActiveMoneyAccountResponse{SupernodeActiveAccount: "supernode_account", Error: ""}, nil
 }
