# m2m-wallet/pkg/services/wallet/wallet_controller.go
@@ -2,68 +2,55 @@ package wallet
 
 import (
 	"context"
-	"encoding/json"
 	"fmt"
 	log "github.com/sirupsen/logrus"
 	"gitlab.com/MXCFoundation/cloud/mxprotocol-server/m2m-wallet/api"
 	"gitlab.com/MXCFoundation/cloud/mxprotocol-server/m2m-wallet/pkg/auth"
-	"google.golang.org/grpc"
+	"gitlab.com/MXCFoundation/cloud/mxprotocol-server/m2m-wallet/pkg/config"
 	"google.golang.org/grpc/codes"
+	"google.golang.org/grpc/status"
 	"time"
 )
 
-func Setup() error {
+
+func Setup(conf config.MxpConfig) error {
 	//todo
 	log.Info("setup wallet service")
+
 	return nil
 }
 
 type WalletServerAPI struct {
-	//todo
+	serviceName string
 }
 
 func NewWalletServerAPI() *WalletServerAPI {
-	return &WalletServerAPI{}
+	return &WalletServerAPI{serviceName: "wallet"}
 }
 
 func (s *WalletServerAPI) GetWalletBalance(ctx context.Context, req *api.GetWalletBalanceRequest) (*api.GetWalletBalanceResponse, error) {
-	//Todo: change url if using diff API, if only one API, put it into conf.
-	//url := "http://172.19.0.5:8080/api/jwtvalidate/"
-	url := "http://appserver:8080/api/internal/profile"
-
-	info, err := auth.TokenMiddleware(ctx, url)
+	userProfile, err := auth.VerifyRequestViaAuthServer(ctx, s.serviceName)
 	if err != nil {
-		return nil, grpc.Errorf(codes.Unauthenticated, "authentication failed: %s", err)
-	}
-
-	errInfo := auth.Err{}
-	err = json.Unmarshal(*info, &errInfo)
-	if err != nil{
-		fmt.Println(err)
-	}
-
-	if errInfo.Error != ""{
-		return nil, grpc.Errorf(codes.Unauthenticated, "authentication failed: %s", errInfo.Error)
-	}
-
-	userInfo := auth.ProfileResponse{}
-	err = json.Unmarshal(*info, &userInfo)
-	if err != nil {
-		fmt.Println(err)
+		return nil, status.Errorf(codes.Unauthenticated, "authentication failed: %s", err)
 	}
 
 	//Todo: userInfo should be the information of users eg.id,name,org,etc. Use it to get data from DB.
-	fmt.Println("userName: ", userInfo.User.Username)
+	fmt.Println("username = ", userProfile.User.Username)
 
-	return &api.GetWalletBalanceResponse{Balance: 54321.1212, Error: ""}, nil
+	return &api.GetWalletBalanceResponse{Balance: 54321.1212, Error: "", UserProfile: &userProfile}, nil
 }
 
-func (s *WalletServerAPI) GetVmxcTxHistory(context.Context, *api.GetVmxcTxHistoryRequest) (*api.GetVmxcTxHistoryResponse, error) {
-	var count = int64(6)
-	history_list := api.GetVmxcTxHistoryResponse{
-		Count: count,
+func (s *WalletServerAPI) GetVmxcTxHistory(ctx context.Context, req *api.GetVmxcTxHistoryRequest) (*api.GetVmxcTxHistoryResponse, error) {
+	userProfile, err := auth.VerifyRequestViaAuthServer(ctx, s.serviceName)
+	if err != nil {
+		return nil, status.Errorf(codes.Unauthenticated, "authentication failed: %s", err)
 	}
 
+	//Todo: userInfo should be the information of users eg.id,name,org,etc. Use it to get data from DB.
+	fmt.Println("username = ", userProfile.User.Username)
+
+	var count = int64(6)
+	history_list := []*api.VmxcTxHistory{}
 	for i := 0; i < int(count); i++ {
 		item := api.VmxcTxHistory{
 			From:      "a",
@@ -73,8 +60,8 @@ func (s *WalletServerAPI) GetVmxcTxHistory(context.Context, *api.GetVmxcTxHistor
 			CreatedAt: time.Now().UTC().String(),
 		}
 
-		history_list.TxHistory = append(history_list.TxHistory, &item)
+		history_list = append(history_list, &item)
 	}
 
-	return &history_list, nil
+	return &api.GetVmxcTxHistoryResponse{Error:"", Count: count, TxHistory: history_list, UserProfile: &userProfile}, nil
 }
